refactor(PN-20370): added InformalEmailCommunicationSubject and InformalPecCommunicationSubject
